# build-action-scheduler

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.org  WORKSPACE  gazelle_python.yaml
data/: complex_actions.json
org_fraggles/build_action_scheduler/: BUILD.bazel  __init__.py  __main__.py
org_fraggles/build_action_scheduler/actions_info/: BUILD.bazel  __init__.py
org_fraggles/build_action_scheduler/dependency_analyzer/: BUILD.bazel  __init__.py
org_fraggles/build_action_scheduler/dependency_analyzer/tests/: BUILD.bazel  test_critical_paths.py  test_cycle_detector.py  test_detect_cycle.py
org_fraggles/build_action_scheduler/executor/: BUILD.bazel  __init__.py
org_fraggles/build_action_scheduler/scheduler/: BUILD.bazel  __init__.py
org_fraggles/build_action_scheduler/scheduler/tests/: BUILD.bazel  test_scheduler.py
org_fraggles/build_action_scheduler/types/: BUILD.bazel  __init__.py
tools/: BUILD.bazel  requirements.in  requirements.txt
tools/black/: BUILD.bazel
tools/isort/: .isort.cfg  BUILD.bazel
