module(
    name = "org_fraggles",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "0.32.2")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.32.2")
bazel_dep(name = "aspect_bazel_lib", version = "1.35.0")
bazel_dep(name = "gazelle", version = "0.33.0", repo_name = "bazel_gazelle")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//tools:requirements.txt",
)
use_repo(pip, "pip")
