load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)

exports_files(["requirements.txt"])

filegroup(
    name = "requirements_in",
    srcs = ["requirements.in"],
)

py_console_script_binary(
    name = "pur",
    args = [
        "-r",
        "$(location :requirements_in)",
    ],
    data = [
        ":requirements_in",
    ],
    pkg = requirement("pur"),
)
