load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "build_action_scheduler_lib",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
    deps = ["@pip//pydantic"],
)

py_binary(
    name = "build_action_scheduler_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        ":build_action_scheduler_lib",
        "@pip//typer",
    ],
)
