load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "build_action_scheduler_lib",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//org_fraggles/build_action_scheduler/types"],
)

py_binary(
    name = "build_action_scheduler_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "//org_fraggles/build_action_scheduler/dependency_analyzer",
        "//org_fraggles/build_action_scheduler/executor",
        "//org_fraggles/build_action_scheduler/scheduler",
        "//org_fraggles/build_action_scheduler/types",
        "@pip//typer",
    ],
)
