load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "scheduler",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//org_fraggles/build_action_scheduler/actions_info",
        "//org_fraggles/build_action_scheduler/dependency_analyzer",
        "//org_fraggles/build_action_scheduler/executor",
        "@pip//pydantic",
    ],
)
