load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_detect_cycle",
    srcs = ["test_detect_cycle.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//org_fraggles/build_action_scheduler/dependency_analyzer",
        "//org_fraggles/build_action_scheduler/types",
        "@pip//pytest",
    ],
)
