load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_scheduler",
    srcs = ["test_scheduler.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//org_fraggles/build_action_scheduler/actions_info",
        "//org_fraggles/build_action_scheduler/dependency_analyzer",
        "//org_fraggles/build_action_scheduler/scheduler",
        "//org_fraggles/build_action_scheduler/types",
        "@pip//pytest",
    ],
)
